# chronos

./: Makefile  README.md  chronos.spec  pyproject.toml
.copr/: Makefile
.local/: Makefile
assets/etc/chronos/: config.toml
assets/usr/lib/systemd/system/: chronos-backup.service  chronos.timer
assets/usr/lib/systemd/user/: chronos.service  chronos.timer
assets/usr/share/bash-completion/completions/: chronos
assets/usr/share/chronos/: config.toml.example
assets/usr/share/fish/completions/: chronos.fish
assets/usr/share/zsh/site-functions/: _chronos
completions/: _chronos  chronos.bash
configs/: config.toml.example
doc/: README.md  restore.md
docs/: README.md  cli.md  configuration.md  packaging.md  restore.md  security.md  systemd.md  versioning.md
docs/examples/: games.toml  projects.toml  system-config.toml
src/chronos/: __init__.py  cli.py  config.py  fs.py  operations.py  output.py  rsync.py  types.py  versioning.py
tests/: test_cli_args.py  test_cli_output.py  test_config_scoped_jobs.py  test_config_scopes.py  test_config_validation.py  test_docs_consistency.py  test_locking.py  test_sudo_user_job_split.py  test_versioned_backups.py
